samples/_failures_safe/1761347533_a3469b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8955077b.c: In function ‘main’:
./samples/SAFE/__tmp_8955077b.c:155:17: error: expected expression at end of input
  155 |                 result =
      |                 ^~~~~~
./samples/SAFE/__tmp_8955077b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8955077b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8955077b.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8955077b.c:155:17: error: expected declaration or statement at end of input
